--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,9 +14,12 @@
   }
 }
 
-@media only screen and (max-width: 425px)
-{
-  .header__logo{
-    font-size: 2.4rem;
+@media only screen and (max-width: 767px) {
+  .header{
+    padding: 0.5rem;
+  
+    &__logo{
+      font-size: 1.8rem;
+    }
   }
 }
