--- a/sass/pages/_menu-chic.scss
+++ b/sass/pages/_menu-chic.scss
@@ -4,7 +4,7 @@
 
 .page-chic{
   @include centrage-colonne;
-  @include menucouleur($font-chic, $color-fond-chic);
+  @include menucouleur($font-chic, $color-fond-chic, 80%);
   
   & h1{
     @include degrade-menu($font-chic);
@@ -90,15 +90,17 @@
 
 @media only screen and (max-width: 767px) {
   .page-chic{
+    @include menucouleur($font-chic, $color-fond-chic, 100%);
     & h1{
       margin: 40px 10px 40px 10px;
       font-size: 5vw;
     }
     &__rubrique{
-      @include centragecategorie (1.8vw, 20px);
+      @include centragecategorie (2.8vw, 20px);
+      width: 95%;
     }
     &__menu{
-      @include centragecontenuem ($font-chic, 100%, 2.3vw);
+      @include centragecontenuem ($font-chic, 100%, 3.5vw);
     }
   }
 }
