--- a/sass/pages/_menu-palette.scss
+++ b/sass/pages/_menu-palette.scss
@@ -4,7 +4,7 @@
 
 .page-palette{
   @include centrage-colonne;
-  @include menucouleur($font-page, $color-fond-palette);
+  @include menucouleur($font-page, $color-fond-palette, 80%);
   
   & h1{
     @include degrade-menu($font-palette);
@@ -76,15 +76,17 @@
 
 @media only screen and (max-width: 767px) {
   .page-palette {
+    @include menucouleur($font-page, $color-fond-palette, 100%);
     & h1{
       margin: 40px 10px 40px 10px;
       font-size: 6vw;
     }
     &__rubrique{
-      @include centragecategorie (2.2vw, 20px);
+      @include centragecategorie (3.2vw, 20px);
+      width: 95%;
     }
     &__menu{
-      @include centragecontenuem ($font-page, 100%, 2.5vw);
+      @include centragecontenuem ($font-page, 100%, 3.5vw);
     }
   }
 }
